--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
       Please use a larger screen to fully enjoy this game.
     </p>
     <canvas>Your browser does not support canvas elements.</canvas>
+
+    <script src="script.js"></script>
   </body>
 </html>
