--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     </p>
     <canvas>Your browser does not support canvas elements.</canvas>
 
+    <script src="Vector.js"></script>
+    <script src="Wall.js"></script>
+    <script src="Ball.js"></script>
+    <script src="collision.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
