--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="Vector.js"></script>
     <script src="Wall.js"></script>
     <script src="Ball.js"></script>
+    <script src="Course.js"></script>
     <script src="collision.js"></script>
     <script src="script.js"></script>
   </body>
