--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <canvas>Your browser does not support canvas elements.</canvas>
 
     <script src="Vector.js"></script>
-    <script src="Wall.js"></script>
-    <script src="Ball.js"></script>
+    <script src="bodies/Body.js"></script>
+    <script src="bodies/Ball.js"></script>
+    <script src="bodies/Wall.js"></script>
     <script src="Course.js"></script>
     <script src="collision.js"></script>
     <script src="script.js"></script>
