Introduce generic shape classes to aid in rendering

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script src="bodies/Body.js"></script>
     <script src="bodies/Ball.js"></script>
     <script src="bodies/Wall.js"></script>
+    <script src="shapes/Circle.js"></script>
+    <script src="shapes/Line.js"></script>
     <script src="Course.js"></script>
     <script src="collision.js"></script>
     <script src="script.js"></script>
