Add mass calculations to SAT

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <canvas>Your browser does not support canvas elements.</canvas>
 
     <script src="Vector.js"></script>
+    <script src="CollisionData.js"></script>
     <script src="bodies/Body.js"></script>
     <script src="bodies/Ball.js"></script>
     <script src="bodies/Wall.js"></script>
